--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
+<!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name_movie"
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:networkSecurityConfig="@xml/check_network_security"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -48,7 +49,7 @@
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/favourite_widget_info" />
+                android:resource="@xml/my_favorite_widget_infos" />
         </receiver>
 
         <service
@@ -80,7 +81,7 @@
             android:name="com.example.submission5.favorit.TvShowFavorite"
             android:label="TvShow Catalogue" />
         <activity android:name="com.example.submission5.view.SearchActivityMoviesFragment" />
-        <activity android:name=".notification.AppCompatService"/>
+        <activity android:name=".notification.AppCompatService" />
     </application>
 
 
