--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
 
         <provider
-            android:name="com.example.submission5.provider.MoviesProvider"
+            android:name="com.example.submission5.myProvider.MoviesProvider"
             android:authorities="com.example.submission5"
             android:exported="true"
             android:readPermission="com.example.submission5.READ_DATABASE"
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.example.submission5.widget.MyFavoriteWidget">
+        <receiver android:name="com.example.submission5.myWidget.MyFavoriteWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -53,35 +53,35 @@
         </receiver>
 
         <service
-            android:name="com.example.submission5.widget.MyWidgetService"
+            android:name="com.example.submission5.myWidget.MyWidgetService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <activity
-            android:name="com.example.submission5.notification.MenuSetting"
+            android:name="com.example.submission5.myNotification.MenuSetting"
             android:parentActivityName="com.example.submission5.MainActivity" />
 
         <receiver
-            android:name="com.example.submission5.notification.DailyPushNotificationForMovie"
+            android:name="com.example.submission5.myNotification.DailyPushNotificationForMovie"
             android:enabled="true"
             android:exported="false" />
         <receiver
-            android:name="com.example.submission5.notification.DailyUpcomingMovies"
+            android:name="com.example.submission5.myNotification.DailyUpcomingMovies"
             android:enabled="true"
             android:exported="false" />
 
         <activity android:name="com.example.submission5.MainActivity" />
-        <activity android:name="com.example.submission5.view.MoviesDetailActivity" />
+        <activity android:name="com.example.submission5.myView.MoviesDetailActivity" />
         <activity
-            android:name="com.example.submission5.view.TVShowDetailActivity"
+            android:name="com.example.submission5.myView.TVShowDetailActivity"
             android:label="TvShow Catalogue" />
-        <activity android:name="com.example.submission5.favorit.MoviesFavorite" />
+        <activity android:name="com.example.submission5.myView.MoviesFavorite" />
         <activity
-            android:name="com.example.submission5.favorit.TvShowFavorite"
+            android:name="com.example.submission5.myView.TvShowFavorite"
             android:label="TvShow Catalogue" />
-        <activity android:name="com.example.submission5.view.SearchActivityMoviesFragment" />
-        <activity android:name=".notification.AppCompatService" />
+        <activity android:name="com.example.submission5.myView.SearchActivityMoviesFragment" />
+        <activity android:name=".myNotification.AppCompatService" />
     </application>
 
 
